--- a/formatos/fms/css/estilos.css
+++ b/formatos/fms/css/estilos.css
@@ -25,11 +25,9 @@ h5{
   display: flex;
   justify-content:flex-start;
 }
-#typed {
 
-}
 .formulario {
-  height: 400px;
+  height: 150px;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -48,4 +46,11 @@ p{
 
 .comenzar{
   margin-bottom: 30px;
+}
+
+/* Publicidad fms.html */
+.publicidad-fms{
+  width: 100%;
+  height: 200px;
+  background-color: rgb(74, 61, 224);
 }
