--- a/formatos/fms/css/fmsFormato.css
+++ b/formatos/fms/css/fmsFormato.css
@@ -97,13 +97,25 @@ h5{
 }
 
 /* Random Mode*/
-.publicidad-rm-1{
+.publicidad-rm{
   width: 100%;
   height: 200px;
   background-color: rgb(7, 99, 115);
 }
-.publicidad-rm-2{
+/* Minuto libre */
+.publicidad-li-medio{
   width: 100%;
   height: 200px;
-  background-color: rgb(7, 99, 115);
+  background-color: rgb(3, 135, 57);
+}
+.publicidad-li-footer{
+  width: 100%;
+  height: 200px;
+  background-color: rgb(3, 135, 57);
+}
+/* Deluxe */
+.publicidad-de{
+  width: 100%;
+  height: 200px;
+  background-color: rgb(156, 52, 130);
 }
