--- a/formatos/fms/css/menu.css
+++ b/formatos/fms/css/menu.css
@@ -39,7 +39,6 @@ h5{
 }
 
 .terminar{
-  margin-top: 50px;
   margin-bottom: 50px;
 }
 
@@ -47,4 +46,11 @@ h5{
   font-family: 'Permanent Marker', cursive;
   font-size: 20px;
   color: red;
+}
+
+/* Publicidad Menu FMS */
+.publicidad-fms-menu{
+  width: 100%;
+  height: 200px;
+
 }
