--- a/formatos/fms/css/resultados.css
+++ b/formatos/fms/css/resultados.css
@@ -19,12 +19,12 @@ h3, h4{
   font-family: 'Russo One', sans-serif;
   text-shadow: 0px 0px 4px white;
 }
-#player1, #p1{
+#p1, #p1-final{
   color: blue;
 
 }
 
-#player2, #p2{
+#p2, #p2-final{
   color:red;
 }
 
