--- a/formatos/8_p/css/resultados.css
+++ b/formatos/8_p/css/resultados.css
@@ -93,6 +93,8 @@ h6{
 .publicidad-8-res{
   width: 100%;
   height: 200px;
-  background-color: rgb(111, 29, 144);
-  margin-bottom: 30px;
+  background-image: url("../../../publicidad/publicidad-8-res.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
