--- a/formatos/12_p/css/resultados12p.css
+++ b/formatos/12_p/css/resultados12p.css
@@ -89,9 +89,11 @@ h6{
 
 /* Espacios publicitarios */
 
-.p12-publicidad-1{
+.publicidad-12-res{
   width: 100%;
   height: 200px;
-  background-color: rgb(111, 29, 144);
-  margin-bottom: 30px;
+  background-image: url("../../../publicidad/publicidad-12-res.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
