--- a/formatos/12_p/css/votacion12p.css
+++ b/formatos/12_p/css/votacion12p.css
@@ -59,3 +59,13 @@ h5{
   font-size: 20px;
   color: red;
 }
+
+/* Publicidad 12p votacion */
+.publicidad-12-vot{
+  width: 100%;
+  height: 200px;
+  background-image: url("../../../publicidad/publicidad-12-vot.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
