--- a/formatos/2_p/css/resultados.css
+++ b/formatos/2_p/css/resultados.css
@@ -87,12 +87,12 @@ h6{
   margin-top: 30px;
 }
 
-/* Espacios publicitarios */
-
-
+/* Publicidad 2 votacion*/
 .publicidad-2-res{
   width: 100%;
   height: 200px;
-  background-color: rgb(111, 29, 144);
-  margin-bottom: 30px;
+  background-image: url("../../../publicidad/publicidad-2-res.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
