--- a/formatos/2_p/css/styles.css
+++ b/formatos/2_p/css/styles.css
@@ -23,7 +23,7 @@ h5{
 }
 
 .formulario {
-  height: 400px;
+  height: 150px;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -41,5 +41,15 @@ p{
 }
 
 .comenzar{
+  margin-top: 30px;
   margin-bottom: 30px;
+}
+/* Publicidad 2 inicio*/
+.publicidad-2-inicio{
+  width: 100%;
+  height: 200px;
+  background-image: url("../../../publicidad/publicidad-2-inicio.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
