--- a/formatos/6_p/css/votacion.css
+++ b/formatos/6_p/css/votacion.css
@@ -59,3 +59,13 @@ h5{
   font-size: 20px;
   color: red;
 }
+
+/* Publicidad 6 vot*/
+.publicidad-6-vot{
+  width: 100%;
+  height: 200px;
+  background-image: url("../../../publicidad/publicidad-6-vot.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
