--- a/formatos/fms/css/fmsFormato.css
+++ b/formatos/fms/css/fmsFormato.css
@@ -75,47 +75,79 @@ h5{
 .publicidad-em{
   width: 100%;
   height: 200px;
-  background-color: rgb(255, 148, 0);
+  background-image: url("../../../publicidad/publicidad-em.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 
 }
 /* hard mode*/
 .publicidad-hm{
   width: 100%;
   height: 200px;
-  background-color: rgb(255, 148, 0);
+  background-image: url("../../../publicidad/publicidad-hm.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 }
 /* Tematicas*/
 .publicidad-te-1{
   width: 100%;
   height: 200px;
-  background-color: rgb(255, 148, 0);
+  background-image: url("../../../publicidad/publicidad-te-1.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 }
 .publicidad-te-2{
   width: 100%;
   height: 200px;
-  background-color: rgb(7, 99, 115);
+  background-image: url("../../../publicidad/publicidad-te-2.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 }
 
 /* Random Mode*/
 .publicidad-rm{
   width: 100%;
   height: 200px;
-  background-color: rgb(7, 99, 115);
+  background-image: url("../../../publicidad/publicidad-rm.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 }
 /* Minuto libre */
 .publicidad-li-medio{
   width: 100%;
   height: 200px;
-  background-color: rgb(3, 135, 57);
+  background-image: url("../../../publicidad/publicidad-li-header.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 }
 .publicidad-li-footer{
   width: 100%;
   height: 200px;
-  background-color: rgb(3, 135, 57);
+  background-image: url("../../../publicidad/publicidad-li-medio.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 }
 /* Deluxe */
 .publicidad-de{
   width: 100%;
   height: 200px;
-  background-color: rgb(156, 52, 130);
+  background-image: url("../../../publicidad/publicidad-de.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 }
