--- a/formatos/fms/css/menu.css
+++ b/formatos/fms/css/menu.css
@@ -52,5 +52,9 @@ h5{
 .publicidad-fms-menu{
   width: 100%;
   height: 200px;
-
+  background-image: url("../../../publicidad/publicidad-fms-menu.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin-bottom: 30px;
 }
