--- a/formatos/fms/css/resultados.css
+++ b/formatos/fms/css/resultados.css
@@ -68,15 +68,14 @@ h3, h4{
 
 }
 /* PUBLICIDAD */
-.publicidad-res-1{
+.publicidad-fms-res{
   width: 100%;
   height: 200px;
-  background-color: rgb(7, 99, 115);
-}
-.publicidad-res-2 {
-  width: 100%;
-  height: 200px;
-  background-color: rgb(238, 126, 100);
+  background-image: url("../../../publicidad/publicidad-fms-res-1.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+
 }
 
 
