--- a/formatos/fms/css/fmsFormato.css
+++ b/formatos/fms/css/fmsFormato.css
@@ -8,7 +8,12 @@
   padding: 0px !important;
 
 }
+.hr{
 
+  width: 100%;
+  height: 1px;
+  box-shadow: 0px 0px 7px black;
+}
 h1{
   font-family: 'Russo One', sans-serif;
   color: black;
