--- a/formatos/fms/css/resultados.css
+++ b/formatos/fms/css/resultados.css
@@ -13,19 +13,28 @@ nav {
 
 }
 h1{
-  text-shadow: 0px 0px 10px white;
+  text-shadow: 0px 0px 5px white;
+  font-family: 'Russo One', sans-serif;
 }
 h3, h4{
   font-family: 'Russo One', sans-serif;
-  text-shadow: 0px 0px 4px white;
+
 }
-#p1, #p1-final{
+
+#p1{
   color: blue;
-
+}
+#p1-final{
+  color: blue;
+  text-shadow: 0px 0px 4px black;
 }
 
-#p2, #p2-final{
+#p2{
   color:red;
+}
+#p2-final{
+  color:red;
+  text-shadow: 0px 0px 4px black;
 }
 
 #chart1, #chart2{
