--- a/formatos/2_p/css/resultados.css
+++ b/formatos/2_p/css/resultados.css
@@ -20,10 +20,12 @@ h5{
 }
 h6{
   font-weight: bold;
-
+}
+footer{
+  padding-bottom: 40px;
 }
 #p1, #p2{
-  text-shadow: 0px 0px 4px white;
+  text-shadow: 0px 0px 4px black;
 }
 .container-fluid{
   height: 100vh;
