--- a/formatos/fms/css/fmsFormato.css
+++ b/formatos/fms/css/fmsFormato.css
@@ -9,7 +9,7 @@
 
 }
 .hr{
- 
+
   width: 100%;
   height: 1px;
   box-shadow: 0px 0px 7px black;
@@ -26,6 +26,9 @@ h5{
   height: 20px;
 }
 
+footer{
+  padding-bottom: 40px;
+}
 .typed{
   margin-top: 120px;
 }
